<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.trilema.doctrinalang.ui.numbers.NumbersFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_dashboard2"
            app:destination="@id/navigation_dashboard"
            app:enterAnim="@anim/fragment_fade_enter"
            app:exitAnim="@anim/fragment_fade_exit" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.trilema.doctrinalang.ui.week.WeekFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_week" >
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_notifications"
            app:destination="@id/navigation_notifications" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.trilema.doctrinalang.ui.month.MonthFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_month" >
        <action
            android:id="@+id/action_navigation_notifications_to_navigation_time"
            app:destination="@id/navigation_time" />
    </fragment>


    <fragment
        android:id="@+id/navigation_time"
        android:name="com.trilema.doctrinalang.ui.time.TimeFragment"
        android:label="@string/title_time"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_position"
        android:name="com.trilema.doctrinalang.ui.position.PositionFragment"
        android:label="@string/title_positions"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.trilema.doctrinalang.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        />

</navigation>