<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    tools:context=".ui.month.MonthFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnMonth01"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/fundoPadrao"
            android:tag="1"
            android:text="@string/month01" />

        <Button
            android:id="@+id/btnMonth02"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/fundoPadrao"
            android:tag="2"
            android:text="@string/month02" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnMonth03"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/fundoPadrao"
            android:tag="3"
            android:text="@string/month03" />

        <Button
            android:id="@+id/btnMonth04"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/fundoPadrao"
            android:tag="4"
            android:text="@string/month04" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnMonth05"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/fundoPadrao"
            android:tag="5"
            android:text="@string/month05" />

        <Button
            android:id="@+id/btnMonth06"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/fundoPadrao"
            android:tag="6"
            android:text="@string/month06" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnMonth07"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/fundoPadrao"
            android:tag="7"
            android:text="@string/month07" />

        <Button
            android:id="@+id/btnMonth08"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/fundoPadrao"
            android:tag="8"
            android:text="@string/month08" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnMonth09"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/fundoPadrao"
            android:tag="9"
            android:text="@string/month09" />

        <Button
            android:id="@+id/btnMonth10"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/fundoPadrao"
            android:tag="10"
            android:text="@string/month10" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnMonth11"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/fundoPadrao"
            android:tag="11"
            android:text="@string/month11" />

        <Button
            android:id="@+id/btnMonth12"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/fundoPadrao"
            android:tag="12"
            android:text="@string/month12" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btnMonthPlay"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/fundoPadrao"
            android:contentDescription="play"
            android:scaleType="center"
            android:src="@drawable/ic_play" />

        <ImageView
            android:id="@+id/btnMonthRepeat"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@color/fundoPadrao"
            android:contentDescription="repeat"
            android:scaleType="center"
            android:src="@drawable/ic_replay"
            android:tag="0" />

    </LinearLayout>
</LinearLayout>