<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:tag="5"
    tools:context=".ui.week.WeekFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnWeek01"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@color/fundoPadrao"
            android:tag="1"
            android:text="@string/week_01" />

        <Button
            android:id="@+id/btnWeek02"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@color/fundoPadrao"
            android:tag="2"
            android:text="@string/week_02" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnWeek03"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@color/fundoPadrao"
            android:tag="3"
            android:text="@string/week_03" />

        <Button
            android:id="@+id/btnWeek04"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@color/fundoPadrao"
            android:tag="4"
            android:text="@string/week_04" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnWeek05"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@color/fundoPadrao"
            android:tag="5"
            android:text="@string/week_05" />

        <Button
            android:id="@+id/btnWeek06"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@color/fundoPadrao"
            android:tag="6"
            android:text="@string/week_06" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnWeek07"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="2"
            android:background="@color/fundoPadrao"
            android:tag="7"
            android:text="@string/week_07" />

        <ImageView
            android:id="@+id/btnWeekPlay"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/fundoPadrao"
            android:contentDescription="play"
            android:scaleType="center"
            android:src="@drawable/ic_play" />

        <ImageButton
            android:id="@+id/btnWeekRepeat"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@color/fundoPadrao"
            android:contentDescription="repeat"
            android:scaleType="center"
            android:src="@drawable/ic_replay"
            android:tag="0" />
    </LinearLayout>


</LinearLayout>
